# goat

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  clean.py  config.json  config.json.example  main.py  pyproject.toml  requirements.txt  run.sh.example
goat/: main.py
plugins/: gpt.py  img2prompt.py  markov.py  openjourney.py  sd.py
plugins/lib/: __init__.py  embeddings.py
util/: config.py  history.py
util/tests/: test_history.py
