[tool.poetry]
name = "goat"
version = "0.1.0"
description = "Simply the best Discord bot."
authors = ["karnagraha", "Mark Kretschmann <kretschmann@kde.org>"]
license = "BSD Zero Clause"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
chromadb = "^0.3.29"
discord-py = "^2.3.1"
glog = "^0.3.1"
openai = "^0.27.8"
pydantic = "^1.10.0"
replicate = "^0.8.4"
requests = "^2.31.0"
tenacity = "^8.2.2"
uuid = "^1.30"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
